add makefile